# upscaler

./: Cargo.toml  FRONTEND_INSTRUCTIONS.md  build.rs  check_clarity.js  check_lowres.js  check_model.js  check_models.js  check_models2.js  check_models3.js  check_models4.js  check_output.txt  check_p_image.js  check_supir.js  check_swinir.js  classes.txt  extract_classes.py  frontend_changes.md  implementation_plan.md  l.startsWith('REPLICATE_API_TOKEN  package-lock.json  package.json  schema.json  search_upscale.js  test.js  test_p_image.js  test_pipeline.js  test_supir.js  test_swinir.js  test_swinir2.js
examples/: system_check.rs
frontend/: app.js  components-5db5e335a63fc84e.css  components-bedfef66a85791ec.css  index.html  landing.js  main-2264e145a3b7504.css  main-4519f14d1f76d586.css  main-5d9e480efd88246d.css  main-6d015a648b878624.css  main-721cca2fd2d9b184.css  main-7a2e03546b66a2a5.css  main-94fdc404342ddab1.css  main-9b25da432e3398f3.css  main-9fdd96899ba231be.css  main-a0be967e0b1a0411.css  main-cbb6fba3e2011b8.css  main-d35184925f99cd92.css  main-db1107d53338a9f0.css  main-e697d6e4d7c1721c.css  main-ebd70130997ac630.css  rust-frontend-13e285a80791727b.js  rust-frontend-17c37f19d294e2f.js  rust-frontend-1c93068bbf97a80b.js  rust-frontend-1cddf72c1238bd4a.js  rust-frontend-22cf80f2c6034a9f.js  rust-frontend-23a732be94c3a055.js  rust-frontend-2dd48130d68047a3.js  rust-frontend-377ec6f8042d06db.js  rust-frontend-3b390c0496f32a16.js  rust-frontend-3d6b3941c8eaf07c.js  rust-frontend-49ef38602dfe8870.js  rust-frontend-500e7966b3f27713.js  rust-frontend-51de11d616da8e6a.js  rust-frontend-582a319595577606.js  rust-frontend-5aa0a2501e77f1fb.js  rust-frontend-5e469b276e1c447e.js  rust-frontend-5f323fc9a59701e5.js  rust-frontend-6295e2329815bc63.js  rust-frontend-6e223d712dc5ae8e.js  rust-frontend-71840fb177807447.js  (+36 more)
frontend_src/: index.html  package-lock.json  package.json
legal/: acceptable-use.md  cookie-policy.md  privacy-policy.md  refund-policy.md  terms-of-service.md
migrations/: 20260414193500_init_upscales.sql  20260416140000_add_job_queue.sql  20260417180000_add_params.sql  20260417180100_add_credits.sql  20260418145200_optimize_upscales_table.sql  20260418152000_add_moderation_logs.sql  20260420220000_add_prompt_settings.sql  20260420220500_add_usage_metadata.sql  20260421104000_add_latency_ms.sql  20260421220000_add_history_composite_index.sql  20260424120000_add_tool_type.sql
rust-frontend/: .gitignore  Cargo.toml  Trunk.toml  build_error_final.txt  build_error_full.txt  build_errors.txt  index.html
rust-frontend/src/: api.rs  auth.rs  main.rs  persistence.rs  text.rs
rust-frontend/src/components/: admin.rs  auth.rs  auth_callback.rs  comparison_slider.rs  configure.rs  cookie_banner.rs  history_gallery.rs  icons.rs  legal.rs  mod.rs  notifications.rs  profile.rs  reset_password.rs  settings.rs  upload_zone.rs  view_result.rs
rust-frontend/style/: components.css  main.css  utilities.css
scratch/: check_dimensions.py  compare_colors.py  download_test_images.py  gemini_research.md  prompt_engineering_research.md  schema.json  test_blip.rs
src/: auth.rs  client.rs  config.rs  credits.rs  db.rs  errors.rs  janitor.rs  lib.rs  main.rs  models.rs  processor.rs  prompts.rs  replicate.rs  storage.rs  stripe.rs  worker.rs
supabase/: config.toml
test/: classifier_summary.rs  exploit_test.rs  integrated_flow.rs  load_test.rs  single_nsfw_test.rs  validator.rs
(+47 files in other folders)
