[package]
name = "upscaler"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gcp_auth = "0.12"
dotenvy = "0.15"
base64 = "0.22"
image = "0.25"
imageproc = "0.25"
axum = { version = "0.7", features = ["multipart", "macros"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
tower_governor = "0.4"
infer = "0.16"
bytes = "1.6"
aws-sdk-s3 = { version = "1.66", features = ["behavior-version-latest"] }
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
jsonwebtoken = { version = "10.3", features = ["aws_lc_rs", "use_pem"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "tls-rustls"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rustls = { version = "0.23", features = ["ring"] }
nsfw = "0.2.0"
kamadak-exif = "0.6"

[build-dependencies]
ureq = "3.3.0"
