[package]
name = "rust-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_router = { version = "0.7" }
gloo-net = "0.6"
gloo-storage = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlElement", "HtmlDivElement", "Node", "FileList", "File", "Blob", "Url", "DataTransfer", "DataTransferItem", "DragEvent", "Event", "TouchEvent", "TouchList", "Touch", "DomRect", "HtmlFormElement", "FormData", "IdbFactory", "IdbDatabase", "IdbObjectStore", "IdbTransaction", "IdbRequest", "IdbVersionChangeEvent", "IdbOpenDbRequest", "IdbTransactionMode"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
console_log = "1.0"
tracing = "0.1"
tracing-wasm = "0.2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde", "js"] }
base64 = "0.22"
pulldown-cmark = "0.13.3"
dotenvy_macro = "0.15"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
